--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -7,6 +7,52 @@
   pointer-events: none;
 }
 
+.nav-ul li{
+  display: inline-block;
+  padding: 10px;
+}
+
+.nav-ul li a{
+  color: #fff;
+  padding: 5;
+  text-decoration: none;
+
+}
+
+.nav-ul{
+  padding: 5;
+  margin: 0;
+  background-color: skyblue;
+}
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  background-color: skyblue;
+
+}
+
+.inputBox{
+  display: block;
+    margin: 25px;
+    padding: 7px;
+    width: 300px;
+    border: 1 px solid skyblue;
+}
+
+.register{
+  margin-left: 40%;
+}
+.appButton{
+  margin: 25px;
+    padding: 10px;
+    width: 150px;
+    background-color: skyblue;
+    border: 1 px solid;
+    cursor: pointer;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
